--- a/discussion.html
+++ b/discussion.html
@@ -5,21 +5,16 @@ title: "ROCA: Resource-oriented Client Architecture - Discussion"
 
 <h2>Discussion</h2>
 
-<p id="disqus_fallback">
-  <noscript>
-    You can head over to the discussion at
-    <a rel="nofollow"
-  href="https://disqus.com/home/discussion/selfcontainedsystems/">Disqus</a>.
-  </noscript>
-  Please also make sure to check out the <a href='/faq.html'>FAQ</a>.
-</p>
-
-
 <div id="disqus_thread"></div>
 <script>
+/**
+* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+*/
+/*
 var disqus_config = function () {
-this.page.url = "http://scs-architecture.org"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "scs"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
@@ -34,6 +29,5 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a
 href="https://disqus.com/?ref_noscript" rel="nofollow">comments
 powered by Disqus.</a></noscript>
-
 
 <script id="dsq-count-scr" src="//selfcontainedsystems.disqus.com/count.js" async></script>
