Clarified database, closes #1

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ SCSs.<p>
 <ol>
 
         <li id="autonomous">Each SCS is an <em>autonomous web
-        application</em>. All data, the logic to process that data and
+        application</em>. For the SCS's domain all data, the logic to process that data and
         all code to render the web interface is contained in the
         SCS. An SCS can fulfill its primary use cases on its own,
         without having to rely on other systems being available.</li>
