Clarified no code. Closes #2

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ SCSs.<p>
 	</li>
 
 	<li id="no-code-sharing">To avoid tight coupling an SCS should
-	<em>share no code</em> with other SCSs. It might be fine to
-	create a pull-request for an SCS, but certainly no source code
-	should be shared.</li>
+	<em>share no business code</em> with other SCSs. It might be fine to
+	create a pull-request for an SCS or use common libraries
+	e.g. database drivers or oAuth clients.</li>
 </ol>
