--- a/discussion.html
+++ b/discussion.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "ROCA: Resource-oriented Client Architecture - Discussion"
+title: "title: "SCS - Self-Contained Systems - Discussion"
 ---
 
 <h2>Discussion</h2>
