Fixed fix. There’s no testing like production testing.

--- a/discussion.html
+++ b/discussion.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "title: "SCS - Self-Contained Systems - Discussion"
+title: "SCS - Self-Contained Systems - Discussion"
 ---
 
 <h2>Discussion</h2>
