Removed redundant "unmaintainable".

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ title: "SCS: Self-Contained Systems"
 <p>The Self-contained System (SCS) approach is an architecture that 
 focuses on a separation of the functionality into many independent
 systems, making the complete logical system a collaboration of many
-smaller software systems. This avoids the problem of large
-unmaintainable monoliths that grow constantly and eventually become
-unmaintainable. Over the past few years, we have seen its benefits in
-many mid-sized and large-scale projects. It</p>
+smaller software systems. This avoids the problem of large monoliths
+that grow constantly and eventually become unmaintainable.
+Over the past few years, we have seen its benefits in many mid-sized
+and large-scale projects. It</p>
 
 <p>The idea is to break a large system apart into several smaller
 self-contained system, or SCSs, that follow certain rules.<p>
