Normalizing singular/plural for "SCS"

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ self-contained system, or SCSs, that follow certain rules.<p>
 
 	<li id="no-shared-ui">An SCS should make its features usable
 	to end-users by its own UI. Therefore the SCS should have
-	<a href="#no-shared-ui">no shared UI</a> with other SCS. SCS might still have
+	<a href="#no-shared-ui">no shared UI</a> with other SCSs. SCSs might still have
 	links to each other. However,  <a href="#no-sync">asynchronous
 	integration</a> means that the SCS should still work even if
 	the UI of another SCS is not available.
