Fixing punctuation and whitespaces

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@ self-contained system, or SCSs, that follow certain rules.<p>
 	<li id="no-shared-ui">An SCS should make its features usable
 	to end-users by its own UI. Therefore the SCS should have
 	<a href="#no-shared-ui">no shared UI</a> with other SCSs. SCSs might still have
-	links to each other. However,  <a href="#no-sync">asynchronous
+	links to each other. However, <a href="#no-sync">asynchronous
 	integration</a> means that the SCS should still work even if
 	the UI of another SCS is not available.
 	</li>
 
 	<li id="no-code-sharing">To avoid tight coupling an SCS should
 	<a href="#no-code-sharing">share no business code</a> with other SCSs. It might be fine to
-	create a pull-request for an SCS or use common libraries
+	create a pull-request for an SCS or use common libraries,
 	e.g. database drivers or oAuth clients.</li>
 </ol>
