--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: "SCS: Self-Contained Systems"
 ---
 <h2>Introduction</h2>
 
-<p>The Self-contained System (SCS) approach is an architecture that 
+<p>The Self-contained System (SCS) approach is an architecture that
 focuses on a separation of the functionality into many independent
 systems, making the complete logical system a collaboration of many
 smaller software systems. This avoids the problem of large monoliths
 that grow constantly and eventually become unmaintainable.
 Over the past few years, we have seen its benefits in many mid-sized
-and large-scale projects. It</p>
+and large-scale projects.</p>
 
 <p>The idea is to break a large system apart into several smaller
 self-contained system, or SCSs, that follow certain rules.<p>
@@ -32,7 +32,7 @@ self-contained system, or SCSs, that follow certain rules.<p>
 	into the code base, for example by merging pull-requests.</li>
 
 	<li id="async">Communication with other SCSs or 3rd party
-	systems is <a href="#async">asynchronous wherever possible</a>. Specifically, 
+	systems is <a href="#async">asynchronous wherever possible</a>. Specifically,
 	other SCSs or external systems should not be accessed synchronously
 	within the SCS's own request/response cycle. This decouples the
 	systems, reduces the effects of failure, and thus supports
