Added description for search engine optimization

--- a/discussion.html
+++ b/discussion.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "SCS - Self-Contained Systems - Discussion"
+description: Discussion about Self-contained Systems (SCS)
 ---
 
 <h2>Discussion</h2>
