--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: "SCS: Self-Contained Systems"
+description: Self-contained Systems (SCS) is a software architecture focused on a separation into independent systems - similar to microservices
 ---
+
 <h2>Introduction</h2>
 
 <p>The Self-contained System (SCS) approach is an architecture that
