--- a/index.html
+++ b/index.html
@@ -71,5 +71,5 @@ self-contained systems, or SCSs, that follow certain rules.<p>
 	decoupling <a href="#avoid-common-infrastructure">shared infrastructure can be minimized</a>.
 	E.g. a shared database make fail safeness and scalability of the SCSs
 	depend on the central database. However, due to e.g. costs a shared database with separate
-	schemas or data models per SCS can be a valid compromise. </li>
+	schemas or data models per SCS can be a valid alternative. </li>
 </ol>
