Add more prominent link to the presentation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@ self-contained systems, or SCSs, that follow certain rules.<p>
 
 <script async class="speakerdeck-embed" data-id="e74a068d06a949cdb358a55ca17d2dc5" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 
+<p>
+  <a href="https://speakerdeck.com/rstrangh/self-contained-systems-1">English
+    Info Deck</a>
+  <a href="slidedeck/en/scs-infodeck-english.key">Keynote</a>
+  <a href="slidedeck/en/scs-infodeck-english.ppt">PowerPoint</a>
+</p>
+
+<p>
+  <a href="https://speakerdeck.com/rstrangh/self-contained-systems-german">German
+    Info Deck</a>
+  <a href="slidedeck/de/scs-infodeck-deutsch.key">Keynote</a>
+  <a href="slidedeck/de/scs-infodeck-deutsch.ppt">PowerPoint</a>
+</p>
+
 <h2 id="scs-characteristics">SCS Characteristics</h2>
 <ol>
 
