PowerPoint updated to new design

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ self-contained systems, or SCSs, that follow certain rules.<p>
   <a href="https://speakerdeck.com/rstrangh/self-contained-systems-1">English
     Info Deck</a>
   <a href="slidedeck/en/scs-infodeck-english.key">Keynote</a>
-  <a href="slidedeck/en/scs-infodeck-english.ppt">PowerPoint</a>
+  <a href="slidedeck/en/scs-infodeck-english.pptx">PowerPoint</a>
 </p>
 
 <p>
   <a href="https://speakerdeck.com/rstrangh/self-contained-systems-german">German
     Info Deck</a>
   <a href="slidedeck/de/scs-infodeck-deutsch.key">Keynote</a>
-  <a href="slidedeck/de/scs-infodeck-deutsch.ppt">PowerPoint</a>
+  <a href="slidedeck/de/scs-infodeck-deutsch.pptx">PowerPoint</a>
 </p>
 
 <h2 id="scs-characteristics">SCS Characteristics</h2>
