--- a/index.html
+++ b/index.html
@@ -17,22 +17,6 @@ and large-scale projects.</p>
 <p>The idea is to break a large system apart into several smaller
 self-contained systems, or SCSs, that follow certain rules.<p>
 
-<script async class="speakerdeck-embed" data-id="e74a068d06a949cdb358a55ca17d2dc5" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
-
-<p>
-  <a href="https://speakerdeck.com/rstrangh/self-contained-systems-1">English
-    Info Deck</a>
-  <a href="slidedeck/en/scs-infodeck-english.key">Keynote</a>
-  <a href="slidedeck/en/scs-infodeck-english.pptx">PowerPoint</a>
-</p>
-
-<p>
-  <a href="https://speakerdeck.com/rstrangh/self-contained-systems-german">German
-    Info Deck</a>
-  <a href="slidedeck/de/scs-infodeck-deutsch.key">Keynote</a>
-  <a href="slidedeck/de/scs-infodeck-deutsch.pptx">PowerPoint</a>
-</p>
-
 <h2 id="scs-characteristics">SCS Characteristics</h2>
 <ol>
 
@@ -87,3 +71,58 @@ self-contained systems, or SCSs, that follow certain rules.<p>
 	depend on the central database. However, due to e.g. costs a shared database with separate
 	schemas or data models per SCS can be a valid alternative. </li>
 </ol>
+
+<h2 id="slidedeck">Info Deck</h2>
+
+<ul>
+	<li><a href="https://speakerdeck.com/rstrangh/self-contained-systems-1">English Info Deck on SpeakerDeck</a></li>
+	<li><a href="https://res.cloudinary.com/innoq/image/upload/pg_1/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.pdf">PDF</a></li>
+	<li><a href="slidedeck/en/scs-infodeck-english.key">Keynote</a></li>
+	<li><a href="slidedeck/en/scs-infodeck-english.pptx">PowerPoint</a></li>
+</ul>
+  
+
+<div class="slides">
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_1/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/w_1200/pg_1/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_2/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_2/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_3/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_3/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_4/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_4/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_5/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_5/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_6/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_6/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_7/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_7/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_8/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_8/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_9/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_9/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_10/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_10/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_11/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_11/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_12/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_12/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_13/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_13/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_14/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_14/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_15/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_15/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_16/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_16/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_17/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_17/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_18/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_18/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_19/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_19/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_20/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_20/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_21/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_21/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_22/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_22/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_23/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_23/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_24/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_24/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_25/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_25/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_26/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_26/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_27/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_27/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_28/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_28/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_29/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_29/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_30/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_30/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_31/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_31/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_32/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_32/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_33/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_33/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_34/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_34/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_35/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_35/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_36/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_36/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_37/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_37/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_38/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_38/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_39/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_39/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_40/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_40/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_41/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_41/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+	<a class="slide-link" href="https://res.cloudinary.com/innoq/image/upload/pg_42/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp"><img src="https://res.cloudinary.com/innoq/image/upload/c_scale,w_1200/pg_42/v1661258993/scs-architecture.org/scs-infodeck-english_adsqcx.webp" class="slide" /></a>
+</div>
